Task5/admin-front-end-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-front-end-app
  namespace: task5
  labels:
    role: admin-front-end
spec:
  replicas: 1
  selector:
    matchLabels:
      role: admin-front-end
  template:
    metadata:
      labels:
        role: admin-front-end
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: admin-front-end-app
  namespace: task5
spec:
  selector:
    role: admin-front-end
  ports:
  - port: 80
    targetPort: 80
